WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23934
Skia platform doesn't render text decoration shadows
https://bugs.webkit.org/show_bug.cgi?id=23934
Summary
Skia platform doesn't render text decoration shadows
Scott Violet
Reported
2009-02-12 15:53:40 PST
This is covered by these layout tests: LayoutTests/fast/repaint/shadow-multiple-horizontal.html LayoutTests/fast/repaint/shadow-multiple-strict-horizontal.html LayoutTests/fast/repaint/shadow-multiple-strict-vertical.html LayoutTests/fast/repaint/shadow-multiple-vertical.html
Attachments
Fix for 23934
(4.88 KB, patch)
2009-02-12 16:00 PST
,
Scott Violet
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Scott Violet
Comment 1
2009-02-12 16:00:05 PST
Created
attachment 27625
[details]
Fix for 23934
Eric Seidel (no email)
Comment 2
2009-02-12 16:11:03 PST
Comment on
attachment 27625
[details]
Fix for 23934 I don't quite understand why the fill/stroke changes are necessary. I'd also rather they were named something like fillColorWithAlpha() if you're going to pre-multiply the alpha?
Scott Violet
Comment 3
2009-02-12 16:15:49 PST
The alpha is stored separately in PlatformContextSkia. To get the real color to draw with you need to add the alpha into it. See other places in PlatformContextSkia that do the same song and dance. Brett suggested the name effectiveXXX.
Eric Seidel (no email)
Comment 4
2009-02-12 16:28:31 PST
Comment on
attachment 27625
[details]
Fix for 23934 144 // Returns the stroke color. The returned color has it's alpha adjusted 145 // by the current alpha. Whoever lands this could change that comment to say "current context alpha" instead of just "current alpha" to be more specific that this is the context-wide alpha which CG supports, thus GraphicsContext supports, and thus we support. I talked this out with brett at length. The patch looks fine.
Dimitri Glazkov (Google)
Comment 5
2009-02-13 11:06:17 PST
Landed as
http://trac.webkit.org/changeset/40982
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug